--- a/WeMake/Base.lproj/Main.storyboard
+++ b/WeMake/Base.lproj/Main.storyboard
@@ -9,8 +9,8 @@
             <objects>
                 <viewController id="xbO-tO-2hg" customClass="WMViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ebV-ep-M2g"/>
-                        <viewControllerLayoutGuide type="bottom" id="cz9-vA-6qA"/>
+                        <viewControllerLayoutGuide type="top" id="OZ5-Xu-pkK"/>
+                        <viewControllerLayoutGuide type="bottom" id="dwe-8c-4P2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ITi-CC-OFw">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -84,8 +84,8 @@
             <objects>
                 <viewController storyboardIdentifier="Feed" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vXZ-lx-hvc" customClass="WMFeedViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="n05-5v-smN"/>
-                        <viewControllerLayoutGuide type="bottom" id="8Zy-om-QEU"/>
+                        <viewControllerLayoutGuide type="top" id="ZvM-ZN-zdX"/>
+                        <viewControllerLayoutGuide type="bottom" id="cxH-C9-cHP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -165,8 +165,8 @@
             <objects>
                 <viewController storyboardIdentifier="Camera" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cVa-bO-kS4" customClass="WMCameraViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="uvd-dS-Nrl"/>
-                        <viewControllerLayoutGuide type="bottom" id="3QR-6s-uuu"/>
+                        <viewControllerLayoutGuide type="top" id="DZN-G2-a8q"/>
+                        <viewControllerLayoutGuide type="bottom" id="HEE-Zs-Qgm"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VDo-lM-Db9">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -326,8 +326,8 @@
             <objects>
                 <viewController storyboardIdentifier="Review" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1tk-5V-gFP" customClass="WMReviewViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1Lr-CR-mf8"/>
-                        <viewControllerLayoutGuide type="bottom" id="rAa-Pc-yCw"/>
+                        <viewControllerLayoutGuide type="top" id="6ZG-MP-GrL"/>
+                        <viewControllerLayoutGuide type="bottom" id="hga-AY-rgI"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="sFS-Q6-3En">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -379,8 +379,8 @@
             <objects>
                 <viewController storyboardIdentifier="Request" useStoryboardIdentifierAsRestorationIdentifier="YES" id="NfC-rA-knd" customClass="WMRequestViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="CXB-S9-KtO"/>
-                        <viewControllerLayoutGuide type="bottom" id="gT6-gh-pjc"/>
+                        <viewControllerLayoutGuide type="top" id="RI8-Eg-49P"/>
+                        <viewControllerLayoutGuide type="bottom" id="hhg-Yl-L4D"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="A1p-86-Tws">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -478,8 +478,8 @@
             <objects>
                 <viewController storyboardIdentifier="Post" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sFY-Md-A5G" customClass="WMPostViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="5pT-IA-Ame"/>
-                        <viewControllerLayoutGuide type="bottom" id="HAY-Fs-QFx"/>
+                        <viewControllerLayoutGuide type="top" id="hSb-rj-dK6"/>
+                        <viewControllerLayoutGuide type="bottom" id="Wos-OK-UmT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VF1-8c-cg0">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -556,8 +556,8 @@
             <objects>
                 <viewController storyboardIdentifier="Upload" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0z4-H2-NKP" customClass="WMUploadViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="WqU-PI-ob6"/>
-                        <viewControllerLayoutGuide type="bottom" id="xKw-c0-rcp"/>
+                        <viewControllerLayoutGuide type="top" id="4QY-cE-WlS"/>
+                        <viewControllerLayoutGuide type="bottom" id="6aR-pI-Pf2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="7Y3-0p-syB" userLabel="View" customClass="UIScrollView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -574,8 +574,8 @@
             <objects>
                 <viewController id="Jov-jq-qaX" customClass="WMLoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="EL6-ET-qnk"/>
-                        <viewControllerLayoutGuide type="bottom" id="NqB-Nf-omC"/>
+                        <viewControllerLayoutGuide type="top" id="ibg-fw-Ebu"/>
+                        <viewControllerLayoutGuide type="bottom" id="gTU-ES-xHh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="fqQ-3l-icv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -695,8 +695,8 @@
             <objects>
                 <viewController restorationIdentifier="Notification" storyboardIdentifier="Notification" id="Hxa-wS-fqj" customClass="WMNotificationViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="H21-cd-QzU"/>
-                        <viewControllerLayoutGuide type="bottom" id="afh-Qe-Qqk"/>
+                        <viewControllerLayoutGuide type="top" id="8SI-Lc-1jU"/>
+                        <viewControllerLayoutGuide type="bottom" id="YS4-PB-pn6"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="I1H-Rx-oEp">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
